# cs50x

./: .gitignore  CMakeLists.txt
problems/2024/x/credit/: credit  credit.c
problems/2024/x/filter-more/: filter.c  helpers.c
problems/2024/x/plurality/: plurality.c
problems/2024/x/readability/: readability  readability.c
problems/2024/x/recover/: recover.c
problems/2024/x/scrabble/: scrabble  scrabble.c
problems/2024/x/substitution/: substitution  substitution.c
problems/2024/x/volume/: volume.c
